[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-stretch"
version = "1.0.1"
description = "Thay đổi chiều dài âm thanh mà không mất nội dung, tích hợp VoxCPM2 TTS."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    {name = "Tam Nguyen", email = "ntamvl@gmail.com"}
]
maintainers = [
    {name = "Tam Nguyen", email = "ntamvl@gmail.com"}
]
keywords = ["audio-stretch", "voxcpm", "text-to-speech", "tts", "speech-synthesis", "voice-cloning", "ai", "deep-learning", "pytorch"]
dependencies = [
    "soundfile>=0.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Thuật toán chất lượng cao (khuyến nghị)
rubberband = ["pyrubberband>=0.3"]

# Thuật toán fallback
librosa = ["librosa>=0.10"]

# TTS integration
tts = ["voxcpm"]

# Toàn bộ
all = ["pyrubberband>=0.3", "librosa>=0.10", "voxcpm"]

# Dev / test
dev = ["pytest", "pytest-cov", "black", "ruff"]

[project.scripts]
audio-stretch = "audio_stretch.cli:main"

[project.urls]
Homepage = "https://github.com/ntamvl/audio-stretch"
Repository = "https://github.com/ntamvl/audio-stretch.git"
Documentation = "https://github.com/ntamvl/audio-stretch#readme"
"Bug Tracker" = "https://github.com/ntamvl/audio-stretch/issues"

[tool.setuptools.packages.find]
where = ["."]
# include = ["audio_stretch*"]
include = ["audio_stretch", "audio_stretch.*"]
